# floneum-site

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  Trunk.toml  build.rs  index.html  out.rs  output.css  package-lock.json  package.json  tailwind.config.js  trunk.html
.cargo/: config.toml
assets/: headless_browser.mov  headless_browsing_example.mov
blog/: SUMMARY.md  book.toml
blog/en/: announcing_floneum.md  anouncing_floneum.md  floneum_0_2.md  index.md  kalosm_0_2.md  kalosm_0_3.md  kalosm_0_4.md  structured_generation_visualized.md
doc_src/: SUMMARY.md
doc_src/en/: index.md
doc_src/en/contributor/: index.md
doc_src/en/developer/: first_plugin.md  index.md
doc_src/en/user/: built_in_plugins.md  community_plugins.md  index.md  workflow.md
doc_src/en/user/concepts/: embedding.md  embedding_db.md  index.md  models.md  structured.md
docs/: 404.html  CNAME.br  Iconpngdff96c41dc662d20.avif  floneum-site.js  floneum-site_bg.wasm  index.html  output.css  output.css.br  tailwind.css
docs/.stage/: output.css
docs/404/: index.html
docs/assets/: CNAME  Icon.png.br  background-alt.jpeg.br  background-alt2.jpeg.br  background-alt3.jpeg.br  background-alt4.jpeg.br  background.jpeg.br  c_logo.png.br  demo-img-7a387f70e1c5d274.webp.br  demo-img.png.br  docs_1-403239e60c4b0351.png.br  docs_1.png.br  docs_2-c92d4c1856f16803.png.br  docs_2.png.br  docs_3-b37d5c1517293e20.png.br  docs_3.png.br  docs_4.png.br  first_workflow_1-b975fc877940fc8b.webp.br  first_workflow_1.png.br  first_workflow_2-4e3cb2e97ffa7898.webp.br  first_workflow_2.png.br  first_workflow_3-7b185806aa7a6098.webp.br  first_workflow_3.png.br  first_workflow_4-dbff2172d8cb9090.webp.br  first_workflow_4.png.br  first_workflow_5-c04478ccd32a9dd7.webp.br  first_workflow_5.png.br  first_workflow_add_node-db9913fa494003c0.webp.br  first_workflow_add_node.png.br  floneum-site-1a2368bd344f3a4f.js  floneum-site-1a2368bd344f3a4f.js.br  floneum-site-1a74fd41b049ed79.js  floneum-site-1a74fd41b049ed79.js.br  floneum-site-2984c13a133db96f.js  floneum-site-2984c13a133db96f.js.br  floneum-site-7538f651069f2c7d.js  floneum-site-7538f651069f2c7d.js.br  floneum-site-b0688a0c8f8178dd.js  floneum-site-b0688a0c8f8178dd.js.br  floneum-site-ce954da0ae683c0e.js  (+45 more)
docs/assets/assets/: .DS_Store.br  Icon.png.br  background-alt.jpeg.br  background-alt2.jpeg.br  background-alt3.jpeg.br  background-alt4.jpeg.br  background.jpeg.br  demo-img.png.br  docs_4.png.br  first_workflow_1.png.br  first_workflow_2.png.br  first_workflow_3.png.br  first_workflow_4.png.br  first_workflow_5.png.br  first_workflow_add_node.png.br  get_article_demo.png.br  headless_browser.mp4.br  java_logo.png.br  live_qa.png.br  load_local_plugin.png.br  loading.css.br  news_summary.png.br  nightly_builds.png.br  plugin_examples.png.br  plugins.png.br  question_answer_example.png.br  rss_demo.png.br  save_cloud.mp4.br  structured_generation_visualized.png.br  top_k_accelerated_structured_generation.png.br  top_k_sampling.png.br  whisper-code.png.br
docs/assets/dioxus/: Floneum.js  Floneum_bg.wasm  floneum-site.js  floneum-site.js.br  floneum-site_bg.wasm  floneum-site_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-2a9fdcda6a4621ea/: inline0.js  inline0.js.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-9ac3b5e174d5b843/: inline0.js  inline0.js.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-cecc56d1674e7627/: inline0.js  inline0.js.br
docs/blog/: index.html
docs/blog/announcing_floneum/: index.html
docs/blog/anouncing_floneum/: index.html
docs/blog/floneum_0_2/: index.html
docs/blog/kalosm_0_2/: index.html
docs/blog/kalosm_0_3/: index.html
docs/blog/kalosm_0_4/: index.html
docs/blog/structured_generation_visualized/: index.html
docs/developer/: index.html
docs/developer/first_plugin/: index.html
docs/docs/: index.html
docs/docs/contributor/: index.html
docs/docs/developer/: index.html
docs/docs/developer/first_plugin/: index.html
docs/docs/user/: index.html
docs/docs/user/built_in_plugins/: index.html
docs/docs/user/community_plugins/: index.html
docs/docs/user/concepts/: index.html
docs/docs/user/workflow/: index.html
docs/kalosm/: index.html
docs/kalosm/docs/: index.html
docs/kalosm/docs/guides/: index.html
docs/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
docs/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
docs/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
docs/structured_generation_visualized/: index.html
docs/user/: index.html
docs/user/built_in_plugins/: index.html
docs/user/concepts/: index.html
docs/user/concepts/embedding/: index.html
docs/user/concepts/embedding_db/: index.html
docs/user/concepts/models/: index.html
docs/user/concepts/structured/: index.html
docs/user/workflow/: index.html
kalosm_doc_src/: SUMMARY.md  book.toml
kalosm_doc_src/en/: index.md
kalosm_doc_src/en/guides/: index.md  resource_augmented_generation.md  retrieval_augmented_generation.md
kalosm_doc_src/en/reference/: classification.md  embedding.md  image_generation.md  image_segmentation.md  text_recognition.md  transcription.md  web_scraping.md
kalosm_doc_src/en/reference/llms/: chat.md  context.md  index.md  moderation.md  structured_generation.md
public/: output.css
public/assets/: loading.css
src/: blog.rs  footer.rs  header.rs  home.rs  kalosm.rs  kalosm_learn.rs  kalosm_search.rs  learn.rs  main.rs  plugin.rs  search.rs  shortcut.rs  structured_generation_visualized.rs  table_of_contents.rs
src/doc_snippets/: chat.rs  custom_parser.rs  embeddings.rs  image_generation.rs  image_segmentation.rs  kalosm.rs  live_qa.rs  llms.rs  mod.rs  structured.rs  text_recognition.rs  transcription.rs  web_scraping.rs
src/kalosm/: cta.rs  data_roller.rs  faq.rs  features.rs  footer.rs  header.rs  hero.rs  hero_code_snippet.rs  learn.rs  mod.rs
(+24 files in other folders)
