[package]
name = "floneum-site"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", features = ["static-generation", "router"] }
syntect-html = { git = "https://github.com/dioxuslabs/include_mdbook" }
mdbook-shared = { git = "https://github.com/dioxuslabs/include_mdbook" }
use-mdbook = { git = "https://github.com/dioxuslabs/include_mdbook" }
dioxus-search = { git = "https://github.com/dioxuslabs/dioxus-search" }
tokenizers = { version = "0.19.1", default-features = false }
tracing = "0.1.40"
regex-automata = { version = "0.4.7", features = ["dfa-search", "dfa-build"], default-features = false }
rand = "0.8.5"
getrandom = { version = "0.2.15" }
html-parser = { git = "https://github.com/ealmloff/html-parser" }
kalosm-sample = { git = "https://github.com/floneum/floneum" }

tokio = { version = "1.29.0", features = ["full"], optional = true }
axum = { version = "0.6.12", optional = true }
simple_logger = "4.2.0"
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.164", features = ["derive"] }
postcard = { version = "1.0.4", features = ["use-std"] }
futures-util-preview = "0.2.2"
anyhow = { version = "1.0.75", optional = true }

kalosm = { version = "0.3.1", features = ["full"], optional = true }
image = { version = "0.24.7", optional = true }
slab = "0.4.9"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Event",
    "AddEventListenerOptions",
] }
gloo-timers = { version = "0.2.6", features = ["futures"], optional = true }
gloo-net = { version = "0.5.0", optional = true }
js-sys = "0.3.64"
fs_extra = { version = "1.3.0", optional = true }

manganis = { version = "0.3.0-alpha.1" }

[dependencies.surrealdb]
version = "1.5.4"
features = ["kv-rocksdb"]
optional = true

[dev-dependencies]
floneum_rust = { git = "https://github.com/floneum/floneum" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
floneumite = { git = "https://github.com/floneum/floneum" }
postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.164", features = ["derive"] }

[patch.crates-io]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-lib = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-core = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-core-macro = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-html = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-cli-config = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-router-macro = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-rsx = { git = "https://github.com/dioxuslabs/dioxus" }

dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-liveview = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-fullstack = { git = "https://github.com/dioxuslabs/dioxus" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = "debuginfo"

# Optimize dependencies for faster incremental builds
[profile.dev.package."*"]
opt-level = 3

# Optimize macros for faster builds
[profile.dev.build-override]
opt-level = 3

[features]
default = []
web = ["dioxus/web", "gloo-timers", "gloo-net", "getrandom/js", "tokenizers/unstable_wasm"]
server = ["tokio", "dioxus/axum", "axum", "tokenizers/default"]
prebuild = ["server", "fs_extra"]
check_docs = ["kalosm", "tokio", "anyhow", "image", "tokenizers/default", "surrealdb"]
