[package]
name = "floneum-site"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["fullstack", "router"] }
syntect-html = { git = "https://github.com/DioxusLabs/docsite" }
mdbook-shared = { git = "https://github.com/DioxusLabs/docsite" }
use-mdbook = { git = "https://github.com/DioxusLabs/docsite" }
dioxus-search = { git = "https://github.com/dioxuslabs/docsite" }
tokenizers = { version = "0.19.1", default-features = false }
tracing = "0.1.40"
regex-automata = { version = "0.4.7", features = ["dfa-search", "dfa-build"], default-features = false }
rand = "0.8.5"
getrandom = { version = "0.2.15" }
html-parser = { git = "https://github.com/ealmloff/html-parser", branch = "bump" }
kalosm-sample = { git = "https://github.com/floneum/floneum" }

tokio = { version = "1.29.0", features = ["full"], optional = true }
axum = { version = "0.6.12", optional = true }
simple_logger = "4.2.0"
log = "0.4.17"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.164", features = ["derive"] }
postcard = { version = "1.0.4", features = ["use-std"] }
futures-util-preview = "0.2.2"
anyhow = { version = "1.0.75", optional = true }

kalosm = { git = "https://github.com/floneum/floneum", features = ["full"], optional = true }
image = { version = "0.24.7", optional = true }
slab = "0.4.9"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Event",
    "AddEventListenerOptions",
    "KeyboardEvent"
] }
gloo-timers = { version = "0.2.6", features = ["futures"], optional = true }
gloo-net = { version = "0.5.0", optional = true }
js-sys = "0.3.64"

[dependencies.surrealdb]
version = "2"
features = ["kv-surrealkv"]
optional = true

[dev-dependencies]
floneum_rust = { git = "https://github.com/floneum/floneum" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
floneumite = { git = "https://github.com/floneum/floneum" }
postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.164", features = ["derive"] }
mdbook-gen = { git = "https://github.com/DioxusLabs/docsite" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = "debuginfo"

# Optimize dependencies for faster incremental builds
[profile.dev.package."*"]
opt-level = 3

# Optimize macros for faster builds
[profile.dev.build-override]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[features]
default = []
web = ["dioxus/web", "gloo-timers", "gloo-net", "getrandom/js", "tokenizers/unstable_wasm"]
server = ["tokio", "dioxus/server", "axum", "tokenizers/default"]
prebuild = []
check_docs = ["kalosm", "tokio", "anyhow", "image", "tokenizers/default", "surrealdb"]
